--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!doctype html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>:pest:weather</title>
 	<link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap.min.css">
 </head>
